# dino_game

./: Cargo.toml  README.md
src/: game.rs  main.rs
src/game/: assets.rs  context.rs  digits.rs  event.rs  helpers.rs  objects.rs  sounds.rs  sprites.rs
src/game/assets/: sounds.rs  sprites.rs
src/game/assets/sprites/: digits.rs  dino.rs  ground.rs  tile.rs
src/game/objects/: dino.rs  ground.rs
src/game/sprites/: digits.rs  dino.rs  ground.rs
