[package]
name = "dino_game"
version = "0.1.0"
authors = ["Oleg Kosmakov <oleg.kosmakov@dataart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.1"
image = "0.23.14"
oorandom = "11.1.3"
getrandom = "0.2"
